-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14
-
Component/s: hotspot
-
b21
Remembered set length prediction consists of two terms: remembered set length from actual prediction and an error term prediction.
For no known reason for predicting rs lengths sometimes the error term is not used (via G1Policy::update_young_list_max_and_target_length).
Fix this.
For no known reason for predicting rs lengths sometimes the error term is not used (via G1Policy::update_young_list_max_and_target_length).
Fix this.