8232776: G1 should always take rs_length_diff into account when predicting rs_lengths

Reviewed-by: sangheki, kbarrett